--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,10 +21,8 @@
     "baseUrl": ".",
     "rootDir": ".",
     "paths": {
-      "@/*": ["./*"],
-      "shared": ["node_modules/shared"]
-    },
-    "preserveSymlinks": true
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -32,8 +30,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts",
-    "../shared/**/*"
+    "**/*.mts"
   ],
   "exclude": ["node_modules"]
 }
