fix ws path prod

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_WEB_SOCKET_URL=ws://99.229.50.210:20002/multi-dodge-game-ws/
+NEXT_PUBLIC_WEB_SOCKET_URL=ws://99.229.50.210/multi-dodge-game-ws/
