--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^12.6.2",
+    "shared": "file:../shared",
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
@@ -21,6 +24,9 @@
     "typescript": "^5.9.3"
   },
   "nodemonConfig": {
-    "watch": ["src", "../shared"]
+    "watch": [
+      "src",
+      "../shared"
+    ]
   }
 }
